<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CargaCodigoManualActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_cod_manual"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/campoCodPaquete"
        android:layout_width="359dp"
        android:layout_height="49dp"
        android:hint="@string/cod_paquete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28">

    </EditText>

    <EditText
        android:id="@+id/campoDescripcionPaquete"
        android:layout_width="359dp"
        android:layout_height="49dp"
        android:hint="@string/desc_paquete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414">

    </EditText>

    <RadioGroup
        android:id="@+id/rgTipoTemperatura"
        android:layout_width="376dp"
        android:layout_height="137dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/campoDescripcionPaquete"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="@+id/campoDescripcionPaquete"
        app:layout_constraintTop_toBottomOf="@+id/campoDescripcionPaquete">

        <RadioButton
            android:id="@+id/rbTempNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:onClick="onRadioButtonClicked"
            android:padding="10dp"
            android:text="Indistinto" />

        <RadioButton
            android:id="@+id/rbTempAlta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:onClick="onRadioButtonClicked"
            android:padding="10dp"
            android:text="Temperatura Alta" />

        <RadioButton
            android:id="@+id/rbTempBaja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:onClick="onRadioButtonClicked"
            android:padding="10dp"
            android:text="Temperatura Baja" />
    </RadioGroup>

    <Button
        android:id="@+id/button7"
        android:layout_width="359dp"
        android:layout_height="52dp"
        android:enabled="false"
        android:text="@string/cargar_paquete"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tipo_temp"
        app:layout_constraintEnd_toEndOf="@+id/campoDescripcionPaquete"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/campoDescripcionPaquete"
        app:layout_constraintTop_toBottomOf="@+id/campoDescripcionPaquete" />
</androidx.constraintlayout.widget.ConstraintLayout>